--- a/SistemaDoLeoBlazor.WEB/Pages/Pedido.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/Pedido.razor
@@ -29,7 +29,7 @@ else
                                             <div class="col-md-6" style="width: 121.641px;">
                                                 <input class="form-control form-control-user" type="number" placeholder="Cod Pedido" style="width: 100px;" 
                                                        name="Cod Pedido" required="" disabled="@stsCodPedido" @bind-value="@pedido.id"
-                                                       @bind-value:event="oninput">
+                                                       @bind-value:event="oninput" @onkeydown="OnKeyDownTxtID">
                                                 </div>
                                             <div class="col-md-6" style="width: 101.641px;">
                                                 <button class="btn btn-primary" type="button" style="transform-style: preserve-3d;" tabindex="-1"
@@ -50,7 +50,7 @@ else
                                         </div>
                                         <div class="form-check form-check-inline" style="margin-top: 9px;">
                                             <input class="form-check-input" type="radio" id="formCheck-2" name="teste" checked="@(pedido.tipoOperacao.Equals("Compra"))" 
-                                            disabled="@stsTipoOperacao" @onchange="@(() => pedido.tipoOperacao = @tipoVenda)">
+                                            disabled="@stsTipoOperacao" @onchange="@(() => pedido.tipoOperacao = tipoCompra)">
                                             <label class="form-check-label" for="formCheck">Compra</label>
                                         </div>
                                     </div>
@@ -135,7 +135,7 @@ else
                             <!-- Start: Excluir -->
                             <button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-2" type="button" 
                                     style="height: 39px;background: rgb(203,30,19);" disabled="@stsBtnExcluir" tabindex="-1"
-                                    @onclick="(() => OpenDeleteDialog())">Excluir</button><!-- End: Excluir -->
+                                    @onclick="(() => OpenDeleteDialog(PEDIDO))">Excluir</button><!-- End: Excluir -->
                         </div><!-- End: Excluir -->
                         <!-- Start: Cancelar -->
                         <div class="col-md-3" style="height: 45px;">
@@ -157,7 +157,7 @@ else
                                             <!-- Start: Novo -->
                                             <button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-4" type="button"
                                                     style="height: 39px;background: rgb(74,170,15);border-radius: 60px;" tabindex="-1"
-                                                    disabled="@stsBtnNovoItem" @onclick="(() => OpenAddProdutoDialog(addProduto))">
+                                                    disabled="@stsBtnNovoItem" @onclick="(() => adicionarItem())">
                                                 Novo
                                             </button><!-- End: Novo -->
                                         </div><!-- End: Novo -->
@@ -166,7 +166,7 @@ else
                                             <!-- Start: Editar -->
                                             <button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-5" type="button"
                                                     style="height: 39px;background: rgb(0,100,200);border-radius: 60px;" tabindex="-1"
-                                                    disabled="@stsBtnEditarItem">
+                                                    disabled="@stsBtnEditarItem" @onclick="(() => editarItem())">
                                                 Editar
                                             </button><!-- End: Editar -->
                                         </div><!-- End: Editar -->
@@ -175,7 +175,7 @@ else
                                             <!-- Start: Excluir -->
                                             <button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-6" type="button"
                                                     style="height: 39px;background: rgb(203,30,19);border-radius: 60px;" tabindex="-1"
-                                                    disabled="@stsBtnExcluirItem">
+                                                    disabled="@stsBtnExcluirItem" @onclick="(() => deletarItem())">
                                                 Excluir
                                             </button><!-- End: Excluir -->
                                         </div><!-- End: Excluir -->
@@ -206,26 +206,52 @@ else
                                                 {
                                                     @foreach(var item in itens)
                                                     {
-                                                        <tr>
-                                                            <td id="codProduto" class="text-truncate" style="max-width: 200px;width: 80.5px;">
-                                                                @item.produtoId
-                                                            </td>
-                                                            <td id="nome" class="text-center" style="width: 179px;text-align: left;">
-                                                                @item.produtoNome
-                                                            </td>
-                                                            <td id="valor" class="text-center" style="width: 75px;">
-                                                                @item.valor
-                                                            </td>
-                                                            <td id="quantidade" class="text-center" style="width: 55px;">
-                                                                @item.quantidade
-                                                            </td>
-                                                            <td id="desconto" class="text-center" style="width: 64px;">
-                                                                @item.desconto%
-                                                            </td>
-                                                            <td id="total" class="text-center" style="width: 114px;">
-                                                                @item.total
-                                                            </td>
-                                                        </tr>
+                                                        @if(itemSelecionado is not null && item.id == itemSelecionado.id)
+                                                        {
+                                                            <tr style="border: 2px solid red;">
+                                                                <td id="codProduto" class="text-truncate" style="max-width: 200px;width: 80.5px;">
+                                                                    @item.produtoId
+                                                                </td>
+                                                                <td id="nome" class="text-center" style="width: 179px;text-align: left;">
+                                                                    @item.produtoNome
+                                                                </td>
+                                                                <td id="valor" class="text-center" style="width: 75px;">
+                                                                    @item.valor
+                                                                </td>
+                                                                <td id="quantidade" class="text-center" style="width: 55px;">
+                                                                    @item.quantidade
+                                                                </td>
+                                                                <td id="desconto" class="text-center" style="width: 64px;">
+                                                                    @item.desconto%
+                                                                </td>
+                                                                <td id="total" class="text-center" style="width: 114px;">
+                                                                    @item.total
+                                                                </td>
+                                                            </tr>
+                                                        }
+                                                        else
+                                                        {
+                                                            <tr @onclick="(() => selectItem(item))">
+                                                                <td id="codProduto" class="text-truncate" style="max-width: 200px;width: 80.5px;">
+                                                                    @item.produtoId
+                                                                </td>
+                                                                <td id="nome" class="text-center" style="width: 179px;text-align: left;">
+                                                                    @item.produtoNome
+                                                                </td>
+                                                                <td id="valor" class="text-center" style="width: 75px;">
+                                                                    @item.valor
+                                                                </td>
+                                                                <td id="quantidade" class="text-center" style="width: 55px;">
+                                                                    @item.quantidade
+                                                                </td>
+                                                                <td id="desconto" class="text-center" style="width: 64px;">
+                                                                    @item.desconto%
+                                                                </td>
+                                                                <td id="total" class="text-center" style="width: 114px;">
+                                                                    @item.total
+                                                                </td>
+                                                            </tr>
+                                                        }
                                                     }
                                                 }
                                             </tbody>
@@ -250,6 +276,6 @@ else
 
     @if (produtoDialogOpen)
     {
-        <AddProduto operacaoItem="@tipoOperacaoProd" pedido="@pedido" produto="@item" OnClose="@OnAddProdutoDialogClose"></AddProduto>
+        <AddProduto operacaoItem="@tipoOperacaoProd" pedido="@pedido" produto="@itemSelecionado" OnClose="@OnAddProdutoDialogClose"></AddProduto>
     }
 }
