--- a/SistemaDoLeoBlazor.WEB/Shared/MainLayout.razor
+++ b/SistemaDoLeoBlazor.WEB/Shared/MainLayout.razor
@@ -23,6 +23,6 @@
     {
         session.LimparSessao();
 
-        navigationManager.NavigateTo("/");
+        navigationManager.NavigateTo("/Login");
     }
 }
