Simplificando html das categorias, continua funcionando da mesma forma, porém mais simples.

--- a/SistemaDoLeoBlazor.WEB/Pages/CadProduto.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/CadProduto.razor
@@ -82,15 +82,8 @@ else
                                 <div class="card">
                                     <div class="card-body">
                                         <h4 class="card-title">Categoria</h4>
-                                        <select class="form-select" required="" disabled="@stsCategoria" @onchange="alterarCategoria">
-                                            @if(status == VISUALIZAR)
-                                            {
-                                                @if(categoria is not null)
-                                                {
-                                                    <option value="@categoria.id">@categoria.nome</option>
-                                                }
-                                            }
-                                            else
+                                        <select class="form-select" required="" disabled="@stsCategoria" @bind="@produto.categoriaId">
+                                            @if(categorias is not null)
                                             {
                                                 <option value="" selected=""></option>
                                                 @foreach (var categoria in categorias)
